# riot-api-ecosystem

./: .dockerignore  .env  .gitignore  .sqlfluff  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.prefect-worker  Local ClickHouse.session.sql  README.example.md  README.md  RECOVERY_SYSTEM.md  clickhouse_filter_test.sql  code_review.md  docker-compose.yml  fresh_start.sh  non-timeline.example.json  prefect.yaml  pyproject.toml  recover_pending_matchdata_rows.sh  requirements.in  requirements.txt  restart  restart.sh  riot.txt  startup.sh  stop_pipeline_safely.sh  tester.py  timeline.example.json
app/: main.py
app/classification/: AUTOENCODER_README.md  DERIVED_METRICS.md  EXPERIMENTS.md  METRIC_CATALOGUE_PLAN.md  README.md  SPECIALISATIONS.md  TEMPORAL_BRANCH_PLAN.md  champion_semantics.py  encoder_common.py  experiments.md  full_game_encoder.py  static_identity_encoder.py  temporal_autoencoder.py
app/ml/: DATASET.md  DIAGNOSTICS.md  OPTIMISATIONS.md  README.md  TESTING.md  audit_format.py  backfill_identity_context.py  build_catalog.py  build_dataset.py  build_encoder_sidecar.py  cache_layout.py  config.py  context_atlas_audit.py  context_audit_lens.py  context_audit_specs.py  context_examples_audit.py  context_probes.py  context_wr_validation.py  dataset.py  encoder_sidecar.py  group_context_audit.py  hgnn_model.py  legacy_classification_runtime.py  loadout_condition.py  loadout_patch_features.py  marginal_eval.py  model.py  patch_features.py  predictor.py  pregame.py  priors.py  promote.py  run_grid_sweep.py  semantic_context_audit.py  semantic_context_lookup.py  semantic_group_features.py  structured_model.py  sweep.py  sweep_bayesian_priors.py  train.py  (+1 more)
app/models/: __init__.py  league_v4.py
app/rl/: __init__.py  alpha_net.py  alpha_smoke.py  alpha_train.py  draft.py  env.py  example.py  (+10 more)
config/: __init__.py  database.py  settings.py
database/: README.md  clickhouse.py  clickhouse_ops.py
models/: __init__.py  base.py  league_v4.py
monitoring/: prometheus.yml
pipeline/: league_v4.py
pipelines/: __main__.py
scripts/: cancel_deployment_runs.py  repair_partial_matchdata.py
services/: __init__.py  errors.py
tests/: test_challenge_fields.py  test_clickhouse_schema_alignment.py  test_match_data_terminal_404.py  test_match_id_stream.py  test_matchdata_orchestrator.py  test_matchids_orchestrator.py  test_non_timeline_parser.py  test_prefect_flow.py  test_repair_partial_matchdata.py  test_riot_league_models.py  test_timeline_parser.py
transforms/: match_v5.py
utils/: __init__.py  async_pipeline.py  file_storage.py  helpers.py  odm.py  rate_limiter.py  resource_validator.py
(+506 files in other folders)
