[project]
name = "fifth-time-lucky-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aioprocessing==2.0.1",
    "aiosignal==1.4.0",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "beanie==2.0.0",
    "billiard==4.2.2",
    "celery==5.5.3",
    "certifi==2025.7.9",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "clickhouse-connect>=0.9.2",
    "colorama==0.4.6",
    "dill==0.4.0",
    "dnspython==2.7.0",
    "fastapi==0.116.0",
    "frozenlist==1.7.0",
    "h11==0.16.0",
    "hiredis==3.2.1",
    "httptools==0.6.4",
    "idna==3.10",
    "kombu==5.5.4",
    "lazy-model==0.3.0",
    "multidict==6.6.3",
    "packaging==25.0",
    "platformdirs==4.4.0",
    "prefect>=3.5.0",
    "prometheus-client>=0.23.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.3.2",
    "psutil==7.0.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "pymongo==4.13.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-json-logger>=4.0.0",
    "pyyaml==6.0.2",
    "redis[hiredis]==6.2.0",
    "requests==2.32.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "tenacity==9.1.2",
    "tomlkit==0.13.3",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn[standard]==0.35.0",
    "vine==5.1.0",
    "watchfiles==1.1.0",
    "wcwidth==0.2.14",
    "websockets==15.0.1",
    "yarl==1.20.1",
    "zstandard==0.23.0",
]

[tool.pyright]
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "astroid>=4.0.4",
    "iniconfig>=2.1.0",
    "mccabe>=0.7.0",
    "memory-profiler>=0.61.0",
    "pluggy>=1.6.0",
    "pylint>=4.0.4",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
    "sqlfluff>=4.0.0",
]
